<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uea.activityprogram.Controllers.Settings_Activity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport = "true">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/NewThemeUea"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/notificationSet"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/synch"
            android:id="@+id/textView5"
            android:layout_marginTop="118dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:paddingTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Select how often you want the calendar to update"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school"
            android:id="@+id/textView7"
            android:layout_below="@+id/spinner"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/school2"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:id="@+id/soundSwitch"
            android:checked="true"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:singleLine="false"
            android:splitTrack="false" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration"
            android:id="@+id/vibSwitch"
            android:textSize="20sp"
            android:checked="true"
            android:layout_alignEnd="@+id/soundSwitch"
            android:layout_below="@+id/soundSwitch"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notif"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView6" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/textView6"
            android:layout_toEndOf="@+id/textView10" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Every"
            android:id="@+id/textView10"
            android:layout_alignStart="@+id/textView4"
            android:paddingTop="10dp"
            android:layout_alignTop="@+id/spinner"
            android:layout_above="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reset"
            android:id="@+id/resettitle"
            android:layout_below="@+id/spinner2"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_user_calendar"
            android:id="@+id/resetCalBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/resettitle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_settings"
            android:id="@+id/resetSetBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/textView5"
            android:layout_toEndOf="@+id/textView3" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
