<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uea.activityprogram.Controllers.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:textSize="20dp"
        android:id="@+id/emailLabel"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emailInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInput"
        android:layout_below="@+id/emailLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/emailInput"
        android:layout_alignStart="@+id/passwordInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/passwordInput"
        android:layout_alignStart="@+id/passwordInput"
        android:background="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerBtn"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignEnd="@+id/loginBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_acct"
        android:id="@+id/textView9"
        android:layout_below="@+id/loginBtn"
        android:layout_alignStart="@+id/passwordInput"
        android:layout_marginTop="40dp"
        android:layout_alignEnd="@+id/loginBtn" />
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/NewThemeUea"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="#000"
            android:id="@+id/footnote"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="@+id/footnote"
            android:src="@drawable/jamdroid_logo"
            android:id="@+id/imageView2" />
    </RelativeLayout>


</RelativeLayout>
