<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uea.activityprogram.Controllers.Register"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/label_name"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nameInput_register" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameInput_register"
        android:layout_below="@+id/label_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/label_email"
        android:textSize="20dp"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/nameInput_register"
        android:layout_alignStart="@+id/label_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInput_register"
        android:layout_below="@+id/label_email"
        android:layout_alignEnd="@+id/nameInput_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:textSize="20dp"
        android:id="@+id/label_password"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/emailInput_register" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput_register"
        android:layout_below="@+id/label_password"
        android:layout_alignEnd="@+id/emailInput_register" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20dp"
        android:id="@+id/registerBtn"
        android:layout_below="@+id/passwordInput_register"
        android:layout_marginTop="61dp"
        android:layout_alignStart="@+id/passwordInput_register"
        android:layout_alignEnd="@+id/passwordInput_register"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/NewThemeUea"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="#000"
            android:id="@+id/footnote"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="@+id/footnote"
            android:src="@drawable/jamdroid_logo"
            android:id="@+id/imageView2" />
    </RelativeLayout>
</RelativeLayout>
