<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayout"
    android:layout_above="@+id/footer"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="80dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:background="@color/black"
        android:textColor="@color/white"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:background="@color/black"
         android:textColor="@color/white"
         android:id="@+id/register"
         android:layout_toEndOf="@+id/login"
         android:layout_marginLeft="5dp" />
</RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:contentDescription="logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/calendar_logo"
        android:paddingBottom="20dp"
        android:layout_alignEnd="@+id/footer"
        android:layout_above="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/NewThemeUea"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="#000"
            android:id="@+id/footnote"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="@+id/footnote"
            android:src="@drawable/jamdroid_logo"
            android:id="@+id/imageView2" />
    </RelativeLayout>


</RelativeLayout>
