<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uea.activityprogram.Controllers.HomeScreen"
    android:textColor ="@color/black">

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/NewThemeUea"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/welcome"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/calendarBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emptyEmail"
            android:id="@+id/emptyEmail"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/welcome"
            android:paddingLeft="10dp" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">

        <!-- icons to navigate app-->

            <ImageButton
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/activitiesCalBtn"
            android:src="@drawable/calendar2"
            android:background="@color/black"
            android:padding="5dp"
            android:layout_alignTop="@+id/calendarBtn"
            android:layout_alignParentStart="true"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:layout_gravity="center" />

            <ImageButton
                    android:scaleType="fitXY"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/calendarBtn"
                    android:src="@drawable/calendar1"
                android:layout_below="@+id/emptyEmail"
                android:background="@color/black"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:layout_gravity="center" />

            <ImageButton
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/settingsBtn"
                android:background="@color/black"
                android:src="@drawable/settings_cog"
                android:padding="10dp"
                android:layout_above="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_gravity="center" />


            <ImageButton
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/logoutBtn"
            android:background="@color/black"
            android:padding="10dp"
                android:src="@drawable/logout"
            android:layout_below="@+id/labelUeaCal"
            android:layout_alignEnd="@+id/emptyEmail"
            android:layout_row="2"
            android:layout_column="0"
                android:layout_margin="5dp"
                android:layout_gravity="center" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_activity_activities_calendar"
            android:id="@+id/labelUeaCal"
            android:layout_below="@+id/calendarBtn"
            android:layout_alignParentStart="true"
            android:textSize="15dp"
            android:layout_alignEnd="@+id/activitiesCalBtn"
            android:layout_row="1"
            android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_user_calendar"
                android:id="@+id/textView2"
                android:textSize="15dp"
                android:layout_below="@+id/calendarBtn"
                android:layout_alignStart="@+id/calendarBtn"
                android:layout_alignEnd="@+id/calendarBtn"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_settings"
                android:id="@+id/labelSet"
                android:textSize="15dp"
                android:layout_below="@+id/settingsBtn"
                android:layout_alignStart="@+id/settingsBtn"
                android:layout_alignParentEnd="true"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/infoBtn"
                android:background="@color/black"
                android:padding="10dp"
                android:src="@drawable/info"
                android:layout_alignTop="@+id/logoutBtn"
                android:layout_alignEnd="@+id/labelSet"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Logout"
                android:id="@+id/labelLogout"
                android:textSize="15dp"
                android:layout_below="@+id/logoutBtn"
                android:layout_alignEnd="@+id/emptyEmail"
                android:layout_alignStart="@+id/welcome"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Info"
                android:textSize="15dp"
                android:id="@+id/labelInfo"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/footer"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="111dp"
                android:layout_height="111dp"
                android:layout_alignParentLeft="@+id/footnote"
                android:src="@drawable/jamdroid_logo"
                android:id="@+id/imageView2"
                android:layout_row="7"
                android:layout_column="1" />

        </GridLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/NewThemeUea"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:textColor="#000"
                android:id="@+id/footnote"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2" />
        </RelativeLayout>


    </RelativeLayout>



</RelativeLayout>
